# llvm-project

./: .gitignore  bug_testing_choices.txt  bug_testing_choices_slow.txt  bug_testing_empty_644.txt  bug_testing_reduction_2.txt  bug_testing_trace_644_epyc.txt  epyc_631_first_strat.txt  file.txt  gen_res_600_first_strat.txt  gen_res_605_first_strat.txt  gen_res_619_first_strat.txt  gen_res_631_first_strat.txt  gen_res_641_first_strat.txt  gen_res_644_first_strat.txt  gen_res_657_first_strat.txt  instrument_alias.py  res_605_first_strat.txt  res_631_first_strat.txt  stats_234_size.txt  stats_240_first_size.txt  stats_240_last_size.txt  stats_278_size.txt  stats_384_size.txt  stats_389_size.txt  stats_less_relaxed.txt  stats_less_relaxed_speedup.txt  stats_precise.txt  stats_precise_size.txt  stats_precise_speedup.txt  stats_relaxed.txt  stats_relaxed_size.txt  stats_relaxed_speedup.txt  tmp.c  tmp.ll  tmp2.ll  validate.py
.gitlab/: gitlab-ci.yml
AAInstrumentation/: README.md  aa_reduction.py  aa_reduction.sh  aa_reduction_bc.sh  aa_reduction_c.sh  bug_testing.py  bug_testing_trace.txt  bug_testing_trace2.txt  config.txt  core.py  determinism_check.py  maximal_relaxation.py  optimization.py  overall_script.py  queries_per_pass.py  unique_hashes.py
clang-tools-extra/: CMakeLists.txt
clang-tools-extra/instrumenter/: .gitignore  AAInstrumenter.cpp  AAInstrumenter.h  CMakeLists.txt  README_BUILD  README_MICHEL.md  README_USE  ReorderFieldsAction.cpp  ReorderFieldsAction.h  a.out  driver.c  expected_old.txt  opt_tmp2.ll  outputlong  tmp.aavars  tmp.c  tmp2.c  tmp2.ll  twoinsert.cpp
clang-tools-extra/instrumenter/examples/: cpp_traditional_example.c  doubleinit.cpp  duplicate.c  duplicate_inst.c  forinit.cpp  label.c  parensbreak.c  parensbreak2.c  parensbreak_other.c  parensbreak_other_inst.c  receiver.cpp  register.cpp  test.cpp  test.inst.cpp  test.ll  test_many_insertions.cpp  test_simple.c  test_simple.cpp  test_then_has_single_sq.cpp
clang-tools-extra/instrumenter/tool/: CMakeLists.txt  ClangAAInstrumenter.cpp  ClangReorderFields.cpp
example/: after_change.ll  after_change_def.ll  after_changed.ll  before_change.ll  generate_lls.sh  generate_traces.sh  implicit_preprocessed copy 2.c  implicit_preprocessed copy.c  implicit_preprocessed.c  parse_traces.py  (+12 more)
(+548 files in other folders)
